// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Snapshots renders a disabled menu item 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  color: #a1aab3;
  cursor: default;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover .wd-icon-fill {
  fill: #b9c0c7;
}

<li
  aria-disabled={true}
  className="emotion-2 emotion-3"
  onClick={[Function]}
  role="menuItem"
  tabIndex={-1}
>
  <span
    className="emotion-0 emotion-1"
  >
    Foo
  </span>
</li>
`;

exports[`Menu Snapshots renders a divided menu item 1`] = `
Array [
  .emotion-0 {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #dfe2e6;
  margin: 8px 0;
}

<hr
    className="emotion-0 emotion-1"
  />,
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: inherit;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover {
  background-color: #e8ebed;
  color: #494949;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

<li
    aria-disabled={false}
    className="emotion-2 emotion-3"
    onClick={[Function]}
    role="menuItem"
    tabIndex={-1}
  >
    <span
      className="emotion-0 emotion-1"
    >
      Foo
    </span>
  </li>,
]
`;

exports[`Menu Snapshots renders a focused menu item 1`] = `
.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-2,
[data-whatinput='touch'] .emotion-2,
[data-whatinput='pointer'] .emotion-2 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-2:hover,
[data-whatinput='touch'] .emotion-2:hover,
[data-whatinput='pointer'] .emotion-2:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-2 .wd-icon-fill,
[data-whatinput='touch'] .emotion-2 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<li
  aria-disabled={false}
  className="emotion-2 emotion-3"
  onClick={[Function]}
  role="menuItem"
  tabIndex={-1}
>
  <span
    className="emotion-0 emotion-1"
  >
    Foo
  </span>
</li>
`;

exports[`Menu Snapshots renders a hidden menu 1`] = `
.emotion-3 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-0:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-0:focus,
[data-whatinput='touch'] .emotion-0:focus,
[data-whatinput='pointer'] .emotion-0:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

<div
  className="emotion-3"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-2"
  >
    <ul
      aria-activedescendant="myId--1"
      className="emotion-0 emotion-1"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Menu Snapshots renders a menu with aria attributes 1`] = `
.emotion-7 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-6 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-4 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-4:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-4:focus,
[data-whatinput='touch'] .emotion-4:focus,
[data-whatinput='pointer'] .emotion-4:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-2,
[data-whatinput='touch'] .emotion-2,
[data-whatinput='pointer'] .emotion-2 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-2:hover,
[data-whatinput='touch'] .emotion-2:hover,
[data-whatinput='pointer'] .emotion-2:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-2 .wd-icon-fill,
[data-whatinput='touch'] .emotion-2 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  className="emotion-7"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-6"
  >
    <ul
      aria-activedescendant="myId-0"
      aria-labelledby="myLabel"
      className="emotion-4 emotion-5"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-label="aria-label"
        className="emotion-2 emotion-3"
        id="myId-0"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Foo
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu Snapshots renders a menu with grow=true 1`] = `
.emotion-10 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-8 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-8:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-8:focus,
[data-whatinput='touch'] .emotion-8:focus,
[data-whatinput='pointer'] .emotion-8:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-2,
[data-whatinput='touch'] .emotion-2,
[data-whatinput='pointer'] .emotion-2 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-2:hover,
[data-whatinput='touch'] .emotion-2:hover,
[data-whatinput='pointer'] .emotion-2:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-2 .wd-icon-fill,
[data-whatinput='touch'] .emotion-2 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-6 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: inherit;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:hover {
  background-color: #e8ebed;
  color: #494949;
}

.emotion-6:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-11 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
  width: 100%;
}

<div
  className="emotion-11"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
  width="100%"
>
  <div
    className="emotion-10"
  >
    <ul
      aria-activedescendant="myId-0"
      className="emotion-8 emotion-9"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        className="emotion-2 emotion-3"
        id="myId-0"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Foo
        </span>
      </li>
      <li
        aria-disabled={false}
        className="emotion-6 emotion-3"
        id="myId-1"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Bar
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu Snapshots renders an empty menu 1`] = `
.emotion-3 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-0:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-0:focus,
[data-whatinput='touch'] .emotion-0:focus,
[data-whatinput='pointer'] .emotion-0:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

<div
  className="emotion-3"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-2"
  >
    <ul
      aria-activedescendant="myId--1"
      className="emotion-0 emotion-1"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Menu Snapshots renders an menu with one item 1`] = `
.emotion-7 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-6 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-4 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-4:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-4:focus,
[data-whatinput='touch'] .emotion-4:focus,
[data-whatinput='pointer'] .emotion-4:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-2,
[data-whatinput='touch'] .emotion-2,
[data-whatinput='pointer'] .emotion-2 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-2:hover,
[data-whatinput='touch'] .emotion-2:hover,
[data-whatinput='pointer'] .emotion-2:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-2 .wd-icon-fill,
[data-whatinput='touch'] .emotion-2 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  className="emotion-7"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-6"
  >
    <ul
      aria-activedescendant="myId-0"
      className="emotion-4 emotion-5"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        className="emotion-2 emotion-3"
        id="myId-0"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Foo
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu Snapshots renders an menu with two items 1`] = `
.emotion-11 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-10 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-8 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-8:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-8:focus,
[data-whatinput='touch'] .emotion-8:focus,
[data-whatinput='pointer'] .emotion-8:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-2 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-2,
[data-whatinput='touch'] .emotion-2,
[data-whatinput='pointer'] .emotion-2 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-2:hover,
[data-whatinput='touch'] .emotion-2:hover,
[data-whatinput='pointer'] .emotion-2:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-2:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-2 .wd-icon-fill,
[data-whatinput='touch'] .emotion-2 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-6 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: inherit;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:hover {
  background-color: #e8ebed;
  color: #494949;
}

.emotion-6:hover .wd-icon-fill {
  fill: #333d47;
}

<div
  className="emotion-11"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-10"
  >
    <ul
      aria-activedescendant="myId-0"
      className="emotion-8 emotion-9"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        className="emotion-2 emotion-3"
        id="myId-0"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Foo
        </span>
      </li>
      <li
        aria-disabled={false}
        className="emotion-6 emotion-3"
        id="myId-1"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
        >
          Bar
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu Snapshots renders with icon 1`] = `
.emotion-11 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  padding: 0px;
}

.emotion-10 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-8 {
  background: #ffffff;
  min-width: 100px;
  border-radius: 3px;
  padding: 0;
  margin: 8px 0;
}

.emotion-8:focus {
  outline: none;
}

[data-whatinput='mouse'] .emotion-8:focus,
[data-whatinput='touch'] .emotion-8:focus,
[data-whatinput='pointer'] .emotion-8:focus {
  outline: none;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.emotion-6 {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 8px 16px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 80ms;
  transition: background-color 80ms;
  background-color: #0875e1;
  color: #ffffff;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6 span .wd-icon-fill {
  fill: #ffffff;
}

[data-whatinput='mouse'] .emotion-6,
[data-whatinput='touch'] .emotion-6,
[data-whatinput='pointer'] .emotion-6 {
  background-color: inherit;
  color: #494949;
}

[data-whatinput='mouse'] .emotion-6:hover,
[data-whatinput='touch'] .emotion-6:hover,
[data-whatinput='pointer'] .emotion-6:hover {
  background-color: #e8ebed;
}

[data-whatinput='mouse'] .emotion-6:hover .wd-icon-fill,
[data-whatinput='touch'] .emotion-6:hover .wd-icon-fill,
[data-whatinput='pointer'] .emotion-6:hover .wd-icon-fill {
  fill: #333d47;
}

[data-whatinput='mouse'] .emotion-6 .wd-icon-fill,
[data-whatinput='touch'] .emotion-6 .wd-icon-fill,
[data-whatinput='pointer'] .emotion-6 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-1 {
  display: inline-block;
  -webkit-flex: 40px 0;
  -ms-flex: 40px 0;
  flex: 40px 0;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  display: inline-block;
  -webkit-flex: 40px 0;
  -ms-flex: 40px 0;
  flex: 40px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-5 svg {
  display: block;
}

.emotion-5 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-5:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-5 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-5:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-5 .wd-icon-background {
  fill: transparent;
}

.emotion-5:hover .wd-icon-background {
  fill: transparent;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

<div
  className="emotion-11"
  style={
    Object {
      "display": "inline-block",
      "minWidth": 102,
    }
  }
>
  <div
    className="emotion-10"
  >
    <ul
      aria-activedescendant="myId-0"
      className="emotion-8 emotion-9"
      id="myId"
      onKeyDown={[Function]}
      role="menu"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-label="myLabel"
        className="emotion-6 emotion-7"
        id="myId-0"
        onClick={[Function]}
        role="menuItem"
        tabIndex={-1}
      >
        <span
          className="emotion-0 emotion-1"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-activity-stream wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M20 17V4H4v13z\\" class=\\"wd-icon-background\\"/><path d=\\"M11 19l-3.602 2.701c-.22.165-.398.083-.398-.196V19H3.49a.496.496 0 0 1-.49-.496V3.496A.5.5 0 0 1 3.5 3h17a.5.5 0 0 1 .5.496v15.008a.503.503 0 0 1-.51.496H11zM5 5v12h14V5H5z\\" class=\\"wd-icon-fill\\"/><path d=\\"M7 11.505c0-.279.228-.505.491-.505h5.018a.49.49 0 0 1 .491.505v.99a.503.503 0 0 1-.491.505H7.491A.49.49 0 0 1 7 12.495v-.99zm0-3C7 8.226 7.228 8 7.51 8h8.98a.5.5 0 0 1 .51.505v.99a.507.507 0 0 1-.51.505H7.51A.5.5 0 0 1 7 9.495v-.99z\\" class=\\"wd-icon-accent\\"/></g></svg>",
            }
          }
        />
        <span
          className="emotion-2 emotion-3"
        >
          Foo
        </span>
        <span
          className="emotion-4 emotion-5"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-activity-stream wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M20 17V4H4v13z\\" class=\\"wd-icon-background\\"/><path d=\\"M11 19l-3.602 2.701c-.22.165-.398.083-.398-.196V19H3.49a.496.496 0 0 1-.49-.496V3.496A.5.5 0 0 1 3.5 3h17a.5.5 0 0 1 .5.496v15.008a.503.503 0 0 1-.51.496H11zM5 5v12h14V5H5z\\" class=\\"wd-icon-fill\\"/><path d=\\"M7 11.505c0-.279.228-.505.491-.505h5.018a.49.49 0 0 1 .491.505v.99a.503.503 0 0 1-.491.505H7.491A.49.49 0 0 1 7 12.495v-.99zm0-3C7 8.226 7.228 8 7.51 8h8.98a.5.5 0 0 1 .51.505v.99a.507.507 0 0 1-.51.505H7.51A.5.5 0 0 1 7 9.495v-.99z\\" class=\\"wd-icon-accent\\"/></g></svg>",
            }
          }
        />
      </li>
    </ul>
  </div>
</div>
`;
